# ubi

./: .actrc  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.yml  .secrets.baseline  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  entrypoint.sh  flake.nix  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  trivy-base-report.txt  trivy-base-scan.sarif  ubi.code-workspace
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/: COPILOT_ALLOWLIST.md  SECURITY_NOTES.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: benchmark.yml  bump-version.yml  copilot-setup-steps.yml  dependency-review.yml  docs.yml  goss-test.yml  megalinter-fix.yml  megalinter.yml  metrics.yml  monitor-base-image.yml  publish.yml  release-notes.yml  secrets-scan.yml  semantic-release.yml  test-examples.yml  test-image.yml  test-unified.yml  trivy-scan.yml  validate-changelog.yml  validate-copilot-setup.yml
CHANGELOG_PATTERN_FIX/: index.html
MKDOCS_SETUP/: index.html
architecture/: index.html
audit/: UBI_AUDIT_2025-12-12_00-16-19.md  UBI_AUDIT_PHASE2_2025-12-13_08-41-21.md
benchmarks/: .gitkeep  README.md
best-practices/: index.html
changelog/: index.html
config/: .ansible-lint  .bandit.yml  .clippy.toml  .commitlint.config.cjs  .cspell.config.mjs  .gitleaks.toml  .grype.yaml  .lintr  .lycheeignore  .mypy.ini  .powershell-formatter.psd1  .powershell-psscriptanalyzer.psd1  .proselintrc  .protolintrc.yml  .puppet-lint.rc  .pylintrc  .rstcheck.cfg  .ruby-lint.yml  .scalafix.conf  .secretlintrc.json  .snakefmt.toml  .sqlfluff  .swiftlint.yml  .syft.yaml  .tektonlintrc.yaml  .tflint.hcl  .trufflehog.yml  .trufflehogignore  .tsqllintrc.json  .vale.ini
config/git/: gitconfig  gitignore_global
config/imagemagick/: colors.xml  delegates.xml  policy.xml
config/nix/: nix.conf
contributing/: index.html
dev/: index.html
dev/copilot-environment/: index.html
docs/: CHANGELOG_PATTERN_FIX.md  MKDOCS_SETUP.md  README.md  architecture.md  changelog.md  examples.md  index.md  license.md  release-process.md  security-overview.md  source-of-truth.md  troubleshooting.md  variants.md
docs/best-practices/: README.md
docs/contributing/: README.md
docs/dev/: README.md  copilot-environment.md
docs/examples/: README.md
docs/getting-started/: installation.md  quick-start.md
docs/security/: README.md  privileged-mode.md
examples/: .gitignore  README.md  index.html
examples/node-express/: README.md  package-lock.json  package.json
examples/node-express/.devcontainer/: devcontainer.json
examples/node-express/src/: app.js  server.js
examples/polyglot/: README.md
examples/polyglot/.devcontainer/: devcontainer.json
examples/polyglot/node/: package-lock.json  package.json
examples/polyglot/node/src/: app.js  server.js
examples/polyglot/python/: pyproject.toml
examples/polyglot/python/processor/: __init__.py  main.py  utils.py
examples/polyglot/scripts/: env-info.sh  setup.sh  start-all.sh  status.sh
examples/python-cli/: README.md  pyproject.toml
examples/python-cli/.devcontainer/: devcontainer.json
examples/python-cli/greet_cli/: __init__.py  cli.py
getting-started/installation/: index.html
getting-started/quick-start/: index.html
license/: index.html
metrics/: README.md
nix/: README.md  entrypoint.sh  flake.nix  install-nix.sh  nix.conf
release-process/: index.html
search/: search_index.json
security/: index.html
security-overview/: index.html
security/privileged-mode/: index.html
shell/: aliases.sh  init.sh
shell/functions/: ssh.sh
shell/lib/: bash.sh  guards.sh  logging.sh  terminal.sh  time.sh  utils.sh
source-of-truth/: index.html
tasks/: github.yml  lint.yml  tools.yml
tests/: README.md  validate-semantic-release.sh
tests/examples/: test-node-express.sh  test-polyglot.sh  test-python-cli.sh
tests/goss/: README.md  goss-full.yaml  goss-minimal.yaml  goss-node.yaml  goss-python.yaml  goss.yaml
tests/integration/: test-env-vars.sh  test-telemetry.sh  test-variant-full.sh  test-variant-minimal.sh  test-variant-node.sh  test-variant-python.sh
tests/negative/: test-restrictions.sh
tests/unit/: test-tasks-lint.sh  test-tasks-tools.sh  test-tasks-utils.sh
troubleshooting/: index.html
variants/: README.md  index.html
variants/full/: Dockerfile
variants/minimal/: Dockerfile
variants/node/: Dockerfile
variants/python/: Dockerfile
