[tool.poetry]
name = "ubi"
version = "0.1.3"
description = "Universal Base Image (UBI) for Ego Hygiene projects. Provides a reproducible development platform with standardized tooling, XDG paths, UX defaults, and environment configuration."
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"


# ---------------------------------------------------------
# bump-my-version configuration
# ---------------------------------------------------------
[tool.bumpversion]
current_version = "0.1.3"

# SemVer parsing
parse = "^(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)$"
serialize = ["{major}.{minor}.{patch}"]

# Replacement logic
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = true

# Commit changes automatically
commit = true
message = "chore: bump version to {new_version}"
allow_dirty = false

# Tagging handled by CI publish workflow — keep disabled
tag = false
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"

# ---------------------------------------------------------
# Files to update
# ---------------------------------------------------------

# 1. VERSION file (source of truth)
[[tool.bumpversion.files]]
filename = "VERSION"
search = "{current_version}"
replace = "{new_version}"

# 2. CHANGELOG insertion (inline block format like bump-my-version repo)
#    This inserts the new version section ABOVE the existing top entry,
#    matching exactly the style used by upstream bump-my-version.
[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
regex = true
search = "\\A## "
replace = """## {new_version} ({now:%Y-%m-%d})
[Compare the full difference.](https://github.com/egohygiene/ubi/compare/{current_version}...{new_version})

## """

# ---------------------------------------------------------
# Developer tooling config (unchanged)
# ---------------------------------------------------------

[tool.black]
line-length = 88
include = '\\.pyi?$'
exclude = '''
/(
    \.git
    | \.ruff_cache
    | \.pytest_cache
    | \.tox
    | \.cache
    | \.venv
    | venv
    | dist
    | build
)/
'''

[tool.ruff]
cache-dir = ".cache/.ruff_cache"
line-length = 88
respect-gitignore = true
target-version = "py312"
src = ["."]
required-version = ">=0.1.0"
fix = false
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["B", "Q"]
fixable = [
    "A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DTZ", "E", "EM", "ERA",
    "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE",
    "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TID", "TRY",
    "UP", "W", "YTT"
]
ignore = []
task-tags = ["TODO", "FIXME", "XXX", "HACK"]
typing-modules = []
unfixable = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.flake8-bandit]
hardcoded-tmp-directory = ["/tmp", "/var/tmp", "/dev/shm"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false
