[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-processor"
version = "0.1.0"
description = "Data processor component of the polyglot example"
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[tool.setuptools]
packages = ["processor"]
